src/test/deca/syntax/valid/if_then_2.deca
//Description
//    Vérifier le comportement du if/else
//
//Résultats :
//   Ok
//

{if(true){;} else if(false){;}}
