src/test/deca/syntax/invalid/if_test2.deca
//Description
//    Vérifier le if
//
//Résultats :
//    Erreur Syntaxique ligne 10
//

{
if(a == 4){;} elseif(a 3){;}
}
